fix hover state for sector link on safari

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -110,6 +110,7 @@
     margin-top: 10px;
     font-family: "Montserrat";
     font-size: 1em;
+    max-width: 500px;
 }
 
 .contactSection2Send {
