--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -332,7 +332,6 @@
   line-height: 120%;
   text-align: center;
   color: #282D6C;
-  transition-duration: .3s;
   margin: 5;
 }
 
@@ -340,6 +339,22 @@
   -webkit-transform: translateY(-6px);
   transform: translateY(-6px);
   filter: drop-shadow(0px 8px 8px rgba(0, 0, 0, 0.25));
+  background: #FFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 380px;
+  height: 65px;
+  text-decoration: none;
+  border-radius: 10px;
+  margin: 10px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.2em;
+  line-height: 120%;
+  text-align: center;
+  color: #282D6C;
+  margin: 5;
 }
 
 .companyBackgroundContainer {
